[project]
name = "code-from-books"
version = "0.1.0"
description = "my code from books"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_from_books"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[project.scripts]
algorithms = "grokking_algorithms.scripts.algorithms:main"
